# utils

./: .gitmodules  .pre-commit-config.yaml  README.md  renovate.json
.github/workflows/: pytest.yml  python-submit-pytest.yml
.github/workflows/python/submit/: pytest.yml
bat/create_virtual_driver/: create_virtual_driver.bat
batch/create_virtual_driver/: README.md  create_virtual_driver.bat
batch/robocopy_sync/: compdirtree.bat  opencloud.bat  sync2cloud.bat  sync2local.bat
python/: ruff.toml  submit.py
python/multi_encoding_converter/: README.md
python/submit/: README.md  pyproject.toml  submit.py
python/submit/tests/: conftest.py  test_submit.py
python/submit/tests/data/adam/: adsl.sas
python/submit/tests/test_file/adam/: adae.sas  addv.sas  adsl.sas
python/submit/tests/test_file/macro/: BAplot.sas  Quantfy.sas
python/submit/tests/test_file/tfl/: t_6_1_1.sas  t_6_1_2.sas
python/submit/tests/tmp/: adae.txt  addv.txt
python/submit/tests/tmp/adam/: adsl.txt
python/submit/tests/tmp/macro/: BAplot.txt
python/submit/tests/validate_file/macro/: BAplot.txt  Quantfy.txt
python/submit/tests/validate_file/tfl/: t_6_1_2.txt
