[project]
name = "submit"
version = "0.1.0"
description = "Extract code block which should be submitted to regulatory agency."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
]

[project.scripts]
submit = "submit:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q -l --tb=auto --color=yes"
testpaths = ["tests"]
pythonpath = [""]
verbosity_test_cases = 2
verbosity_assertions = 2

[tool.ruff]
line-length = 120
